--- a/photogram-riso.html
+++ b/photogram-riso.html
@@ -26,7 +26,7 @@
   </div>  
 
   <div class="description">
-    <p>An experiment in using the web browser as a tool to design digital repeat prints. This particular experiment began as a first-time exploration into making <a href="https://www.tate.org.uk/art/art-terms/p/photogram" target="blank">photograms</a>.</p>
+    <p>An experiment in using the web browser as a tool to design digital repeat prints. This particular experiment began as a first-time exploration into making <a href="photogram.index" target="blank">photograms</a>.</p>
   </div>
   
     
