kroy-wen-assets

--- a/kroy-wen-riso-two.html
+++ b/kroy-wen-riso-two.html
@@ -16,56 +16,47 @@
   </head>
   <body>
     <video
-      id="background-video" autoplay loop muted poster="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2F01.mov?v=1632936204836"
-    >
-      <source
-        src="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2F01.mov?v=1632936204836"
-        type="video/mp4"
-      />
+      id="background-video" autoplay loop muted poster src="assets/kroy-wen-riso-two-bg.mov"
+        type="video/mov">
     </video>
     <div class="image-1">
       <img
-        src="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2F02.jpg?v=1632934766596"
+        src="assets/kroy-wen-riso-two-8.png"
       />
     </div>
     <div class="image-2">
       <img
-        src="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2FScreen%20Shot%202021-09-22%20at%208.01.46%20PM.png?v=1632934176664"
+        src="assets/kroy-wen-riso-two-6.png"
       />
     </div>
     <div class="image-3">
       <img
-        src="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2F(2)9-22-2021-01.png?v=1632934820716"
+        src="assets/kroy-wen-riso-two-1.png"
       />
     </div>
     <div class="image-4">
       <img
-        src="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2F(3)9-22-2021-01.png?v=1632934823480"
+        src="assets/kroy-wen-riso-two-2.png"
       />
     </div>
     <div class="image-5">
       <img
-        src="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2FScreen%20Shot%202021-09-23%20at%208.44.43%20PM.png?v=1632934826614"
-      />
-    </div>
-    <div class="image-6">
-      <img
-        src="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2FScreen%20Shot%202021-09-23%20at%208.44.52%20PM.png?v=1632934830544"
+        src="assets/kroy-wen-riso-two-5.png"
       />
     </div>
     <div class="image-7">
       <img
-        src="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2FScreen%20Shot%202021-09-23%20at%208.46.52%20PM.png?v=1632934834737"
+        src="assets/kroy-wen-riso-two-4.png"
       />
     </div>
     <div class="image-8">
       <img
-        src="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2FScreen%20Shot%202021-09-23%20at%208.46.59%20PM.png?v=1632934837929"
+        src="assets/kroy-wen-riso-two-3.png"
       />
     </div>
     <div class="image-9">
       <img
-        src="https://cdn.glitch.com/c1b87c98-08da-49cf-a387-3be85979a248%2FScreen%20Shot%202021-09-23%20at%2011.40.32%20AM.png?v=1632934842495"
+        src="assets/kroy-wen-riso-two-7.png"
       />
     </div>
   </body>
