--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <div class="index">
     <a href="photogram.html">Photogram</a></br>
-    <a href="photogram-riso.html">Photogram + Riso</a>
+    <a href="photogram-riso.html">Photogram + Riso</a></br>
     <a href="kroy-wen-riso-two.html">Kroy Wen Riso 2</a>
   </div>
   </body>
