--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <div class="index">
     <a href="photogram.html">Photogram</a></br>
     <a href="photogram-riso.html">Photogram + Riso</a></br>
-    <a href="kroy-wen-riso-two.html">Kroy Wen Riso 2</a>
+    <a href="kroy-wen-riso-two.html">Kroy Wen Riso 2</a></br>
+    <a href="kroy-wen-riso.html">Kroy Wen Riso</a>
   </div>
   </body>
 </html>
