--- a/kroy-wen-riso-two.html
+++ b/kroy-wen-riso-two.html
@@ -44,20 +44,110 @@
         src="assets/kroy-wen-riso-two-5.png"
       />
     </div>
-    <div class="image-7">
+    <div class="image-6">
       <img
         src="assets/kroy-wen-riso-two-4.png"
       />
     </div>
-    <div class="image-8">
+    <div class="image-7">
       <img
         src="assets/kroy-wen-riso-two-3.png"
       />
     </div>
-    <div class="image-9">
+    <div class="image-8">
       <img
         src="assets/kroy-wen-riso-two-7.png"
       />
+    </div>
+    <div class="image-9">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-9.MP4" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-10">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-10.MP4" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-11">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-11.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-12">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-12.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-13">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-13.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-14">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-14.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-15">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-15.mov" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-16">
+      <img
+        src="assets/kroy-wen-riso-two-16.png"
+      />
+    </div>
+    <div class="image-17">
+      <img
+        src="assets/kroy-wen-riso-two-17.png"
+      />
+    </div>
+    <div class="image-18">
+      <img
+        src="assets/kroy-wen-riso-two-18.png"
+      />
+    </div>
+    <div class="image-19">
+      <img
+        src="assets/kroy-wen-riso-two-19.png"
+      />
+    </div>
+    <div class="image-20">
+      <img
+        src="assets/kroy-wen-riso-two-20.png"
+      />
+    </div>
+    <div class="image-21">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-21.mov" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-22">
+      <img
+        src="assets/kroy-wen-riso-two-22.png"
+      />
+    </div>
+    <div class="image-23">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-23.MOV" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-24">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-24.MOV" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-25">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-25.MOV" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-26">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-26.MOV" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-27">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-27.mov" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-28">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-28.mov" type="video/mp4">
+      </video>
+    </div>
+    <div class="image-29">
+      <video autoplay loop muted src="assets/kroy-wen-riso-two-29.mov" type="video/mp4">
+      </video>
     </div>
   </body>
 </html>
