--- a/kroy-wen-riso.html
+++ b/kroy-wen-riso.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="" />
 
-    <title>Kroy Wen Riso 2</title>
+    <title>Kroy Wen Riso</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="reset.css"/>
