--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <a href="photogram.html">Photogram</a></br>
     <a href="photogram-riso.html">Photogram + Riso</a></br>
     <a href="kroy-wen-riso-two.html">Kroy Wen Riso 2</a></br>
-    <a href="kroy-wen-riso.html">Kroy Wen Riso</a>
+    <a href="kroy-wen-riso.html">Kroy Wen Riso</a></br>
+    <a href="laser-cut-type.html">Laser Cut Type</a>
   </div>
   </body>
 </html>
