--- a/photogram.html
+++ b/photogram.html
@@ -33,15 +33,15 @@
   <div class="three">
    <img src="assets/photogram-3.jpg">
   </div>
-  <div class="text-top">
-    <p>This experiment began as an in-class photography workshop at Otis College of Art & Design in the MFA Graphic Design program.
-      We were asked to bring in 10 objects that we would be using to create photograms (a method of photography-based image-making that was unkown to me).
-      I decided to pick up small trinkets and jewellery - chachkis, if you will - around my apartment that were of sentimental value to me.
-      From a ring my grandmother gave me to small ceramic frogs my aunt had sent me off with as a good luck charm, I had no idea what kind of images I would be making.</p>
-  </div>
   <div class="four">
    <img src="assets/photogram-4.jpg">
   </div>
+  </div>
+
+  <div class="text-top">
+    <p>This experiment began with picking out 10 objects that I would be using to create photograms (a method of photography-based image-making that was unkown to me).
+      I decided to pick up small trinkets and jewellery - chachkis, if you will - around my apartment that were of sentimental value to me.
+      From a ring my grandmother gave me to small ceramic frogs my aunt had sent me off with as a good luck charm, I had no idea what kind of images these objects would produce.</p>
   </div>
 
   <div class="define-text">
@@ -53,6 +53,7 @@
   <div class="define">
   </div>
 
+  <div class="scans-group">
   <div class="scans">
     <img src="assets/photogram-6.jpg">
     <img src="assets/photogram-7.jpg">
@@ -79,15 +80,32 @@
     <img src="assets/photogram-28.jpg">
   </div>
 
+  <div class="text-scans">
+    <p>Once I had made my photograms I decided to <span class="scan-word">scan</span> them to be able to keep a digital, high resolution copy. This led to messing around with <span class="scan-word">dragging</span> the photograms in different directions and at different speeds during the scanning <span class="scan-word">process</span>. By doing this I was able to produce all of the image studies shown on the right, creating textured patterns and haunting silhouettes.</p>
+  </div>
+</div>
+
+<div class="compositions">
   <div class="composition-1">
     <img src="assets/photogram-29.jpg">
+    <p>10"x8" Composition</p>
   </div>
   <div class="composition-2">
     <img src="assets/photogram-30.jpg">
+    <p>18"x24" Composition</p>
   </div>
   <div class="composition-3">
     <img src="assets/photogram-31.jpg">
+    <p>36"x48" Composition</p>
   </div>
+</div>
+
+<a href="photogram-riso.html" target="_blank">
+<div id="banner">
+ <h1 id="text">see what happened when I riso'd the scans</h1>
+</div>
+</a>
+
     
   </body>
 </html>
