--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href=""/>
+    <link rel="stylesheet" href="home-style.css"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
      <!-- add new favicon here -->
-    <link rel="icon" href=""/>
+    <link rel="icon" href="assets/favicon-01.png"/>
 
-    <title>Index</title>
+    <title>Have Fun, Make, Escape</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,39 +18,11 @@
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
-    <style>
-
-      body{
-        background-color: black;
-      }
-
-      a{
-        color: white;
-        text-decoration: underline;
-        font-size: 3em;
-        font-family: Arial;
-        line-height: 1.5em;
-      }
-
-      a:hover{
-        color: blue;
-        font-size: 10em;
-      }
-
-      .index{
-        padding: 6em;
-      }
-
-    </style>
 
   </head>
   <body>
     <div class="index">
-    <a href="photogram.html">Photogram</a></br>
-    <a href="photogram-riso.html">Photogram + Riso</a></br>
-    <a href="kroy-wen-riso-two.html">Kroy Wen Riso 2</a></br>
-    <a href="kroy-wen-riso.html">Kroy Wen Riso</a></br>
-    <a href="laser-cut-type.html">Laser Cut Type</a>
+    <a href="projects.html" class="link"><img src="assets/overlay-home copy.png"></a>
   </div>
   </body>
 </html>
