--- a/photogram-riso.html
+++ b/photogram-riso.html
@@ -189,6 +189,19 @@
     </div>
   </div>
 
+  <div class="videos">
+    <video class="vone" autoplay loop muted src="assets/photogram-riso-14.mov" type="video/mov">
+    </video>
+    <video class="vtwo" autoplay loop muted src="assets/photogram-riso-15.mov" type="video/mov">
+    </video>
+    <video class="vthree" autoplay loop muted src="assets/photogram-riso-16.mov" type="video/mov">
+    </video>
+    <video class="vfour" autoplay loop muted src="assets/photogram-riso-17.mov" type="video/mov">
+    </video>
+    <video class="vfive" autoplay loop muted src="assets/photogram-riso-18.mov" type="video/mov">
+    </video>
+  </div>
+
     <div class="process">
       <img src="assets/photogram-riso-6.png">
       <img src="assets/photogram-riso-7.png">
@@ -197,18 +210,6 @@
       <img src="assets/photogram-riso-10.png">
       <img src="assets/photogram-riso-11.png">
       <img src="assets/photogram-riso-12.png">
-      <video autoplay loop muted src="assets/photogram-riso-13.mov" type="video/mov">
-      </video>
-      <video autoplay loop muted src="assets/photogram-riso-14.mov" type="video/mov">
-      </video>
-      <video autoplay loop muted src="assets/photogram-riso-15.mov" type="video/mov">
-      </video>
-      <video autoplay loop muted src="assets/photogram-riso-16.mov" type="video/mov">
-      </video>
-      <video autoplay loop muted src="assets/photogram-riso-17.mov" type="video/mov">
-      </video>
-      <video autoplay loop muted src="assets/photogram-riso-18.mov" type="video/mov">
-      </video>
     </div>
     
   </body>
