--- a/projects.html
+++ b/projects.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href=""/>
+    <link rel="stylesheet" href="projects-style.css"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
      <!-- add new favicon here -->
     <link rel="icon" href=""/>
 
-    <title>Index</title>
+    <title>Projects</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,37 +20,29 @@
     <script src="/script.js" defer></script>
     <style>
 
-      body{
-        background-color: black;
-      }
-
-      a{
-        color: white;
-        text-decoration: underline;
-        font-size: 3em;
-        font-family: Arial;
-        line-height: 1.5em;
-      }
-
-      a:hover{
-        color: blue;
-        font-size: 10em;
-      }
-
-      .index{
-        padding: 6em;
-      }
 
     </style>
 
   </head>
   <body>
+
+    <div class="top-nav">
+      <a href="about.html">about</a>
+      <a href="submissions.html">submissions</a>
+    </div>
+
+    <div class="bottom-nav">
+    <a href="user.html">user profile</a> 
+    <a href="my-archive.html">my archive</a>
+    </div>
+
     <div class="index">
-    <a href="photogram.html">Photogram</a></br>
-    <a href="photogram-riso.html">Photogram + Riso</a></br>
-    <a href="kroy-wen-riso-two.html">Kroy Wen Riso 2</a></br>
-    <a href="kroy-wen-riso.html">Kroy Wen Riso</a></br>
-    <a href="laser-cut-type.html">Laser Cut Type</a>
-  </div>
+      <a href="photogram.html"><img src="assets/photogram-5.jpg"></a>
+      <a href="photogram-riso.html"><img src="assets/photogram-riso-1.jpg"></a>
+      <a href="kroy-wen-riso.html"><img src="assets/kroy-wen-riso-43.jpg"></a>
+      <a href="kroy-wen-riso-two.html"><img src="assets/kroy-wen-riso-two-8.png"></a>
+      <a href="laser-cut-type.html"><img src="assets/laser-cut-type-8.jpeg"></a>
+    </div>
+
   </body>
 </html>
