--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href="index-style-copy.css"/>
+    <link rel="stylesheet" href="about-style.css"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -22,6 +22,11 @@
   </head>
   <body>
     <h1>about</h1>
+    <div class="text">
+    <p>Esc is an online platform for multi-media graphic design explorations into making quickly and without constraint. With the goal of reaching the level of abstract making and experimentation we once had as children, this project challenges the idea that there has to be meaning in the design process - the meaning can come after the making.</br></br>
+
+      As graphic designers we are always designing for others, or “problem-solving” — Esc aims to encourage designers to make more for themselves. Geared specifically towards design students feeling the toll of the events of the past couple years on their creativity, their conscience, mainly their mental health - this is an experiment in using the action of making without thinking as a method of self-care through escapism, while also expanding your design abilities.</p>
+    </div>
   </div>
   </body>
 </html>
