--- a/projects.html
+++ b/projects.html
@@ -37,12 +37,51 @@
     </div>
 
     <div class="index">
-      <a href="photogram.html"><img src="assets/photogram-5.jpg"></a>
-      <a href="photogram-riso.html"><img src="assets/photogram-riso-1.jpg"></a>
-      <a href="kroy-wen-riso.html"><img src="assets/kroy-wen-riso-43.jpg"></a>
-      <a href="kroy-wen-riso-two.html"><img src="assets/kroy-wen-riso-two-8.png"></a>
-      <a href="laser-cut-type.html"><img src="assets/laser-cut-type-8.jpeg"></a>
+      <div class="photogram">
+      <a href="photogram.html"><img class="one" src="assets/photogram-5.jpg"></a>
+      <a href="photogram.html"><img class="two" src="assets/photogram-9.jpg"></a>
+      <a href="photogram.html"><img class="three" src="assets/photogram-29.jpg"></a>
+      <a href="photogram.html"><img class="four" src="assets/photogram-19.jpg"></a>
+      <a href="photogram.html"><img class="five" src="assets/photogram-23.jpg"></a>
     </div>
+
+    <div class="photogram-riso">
+      <a href="photogram-riso.html"><img class="six" src="assets/photogram-riso-1.jpg"></a>
+      <a href="photogram-riso.html"><img class="seven" src="assets/photogram-riso-5.jpg"></a>
+      <a href="photogram-riso.html"><img class="eight" src="assets/photogram-riso-3.jpg"></a>
+      <a href="photogram-riso.html"><img class="nine" src="assets/photogram-riso-2.jpg"></a>
+      <a href="photogram-riso.html"><img class="ten" src="assets/photogram-riso-11.png"></a>
+    </div>
+
+    <div class="kroy-wen-riso">
+      <a href="kroy-wen-riso.html"><img class="eleven" src="assets/kroy-wen-riso-43.jpg"></a>
+      <a href="kroy-wen-riso.html"><video autoplay loop muted src="assets/kroy-wen-riso-31.mp4" type="video/mp4" class="twelve">
+      </video></a>
+      <a href="kroy-wen-riso.html"><video autoplay loop muted src="assets/kroy-wen-riso-27.mov" type="video/mov" class="thirteen">
+      </video></a>
+      <a href="kroy-wen-riso.html"><img class="fourteen" src="assets/kroy-wen-riso-40.jpg"></a>
+      <a href="kroy-wen-riso.html"><video autoplay loop muted src="assets/kroy-wen-riso-two-12.mp4" type="video/mp4" class="fifteen">
+      </video></a>
+    </div>
+
+    <div class="kroy-wen-riso-two">
+      <a href="kroy-wen-riso-two.html"><img class="sixteen" src="assets/kroy-wen-riso-two-8.png"></a>
+      <a href="kroy-wen-riso-two.html"><video autoplay loop muted src="assets/kroy-wen-riso-two-28.mov" type="video/mov" class="seventeen">
+      </video></a>
+      <a href="kroy-wen-riso-two.html"><img class="eighteen" src="assets/kroy-wen-riso-two-5.png"></a>
+      <a href="kroy-wen-riso-two.html"><img class="nineteen" src="assets/kroy-wen-riso-two-22.png"></a>
+      <a href="kroy-wen-riso-two.html"><video autoplay loop muted src="assets/kroy-wen-riso-two-15.mov" type="video/mov" class="twenty">
+      </video></a>
+    </div>
+
+    <div class="laser-cut-type">
+      <a href="laser-cut-type.html"><img class="twenty-one" src="assets/laser-cut-type-8.jpeg"></a>
+      <a href="laser-cut-type.html"><img class="twenty-two" src="assets/laser-cut-type-17.jpeg"></a>
+      <a href="laser-cut-type.html"><img class="twenty-three" src="assets/laser-cut-type-6.jpeg"></a>
+      <a href="laser-cut-type.html"><img class="twenty-four" src="assets/laser-cut-type-16.jpeg"></a>
+      <a href="laser-cut-type.html"><img class="twenty-five" src="assets/laser-cut-type-13.jpeg"></a>
+    </div>
+  </div>
 
   </body>
 </html>
