--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href="index-style-copy.css"/>
+    <link rel="stylesheet" href="index-style.css"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -22,7 +22,10 @@
   </head>
   <body>
     <div class="index">
+    <div class="hover">
     <a href="projects.html" class="link"><img src="assets/button1.png"></a>
+    <a href="projects.html" class="hover-link"><img src="assets/button2.png"></a>
   </div>
+</div>
   </body>
 </html>
