--- a/projects.html
+++ b/projects.html
@@ -27,13 +27,13 @@
   <body>
 
     <div class="top-nav">
-      <a href="about.html">about</a>
+      <a href="about-copy.html">about</a>
       <a href="submissions.html">submissions</a>
     </div>
 
     <div class="bottom-nav">
     <a href="user.html">user profile</a> 
-    <a href="my-archive.html">my archive</a>
+    <a href="photogram-riso.html">random</a>
     </div>
 
     <div class="index">
