--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="reset.css"/>
     <link rel="stylesheet" href="projects-style.css"/>
+    <link href="https://static.tumblr.com/xngweh4/lthnr6vng/colpick.css" rel="stylesheet"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -15,8 +16,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Averia+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    
 
     <!-- import the webpage's javascript file -->
+    <script src="/https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="/https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <script src="/https://static.tumblr.com/xngweh4/jVInr6vnz/colpick.js"></script>
     <script src="/script.js" defer></script>
     <style>
 
@@ -25,6 +30,7 @@
 
   </head>
   <body>
+    <div id="picker"></div>
 
     <div class="top-nav">
       <a href="about-copy.html">about</a>
