--- a/projects.html
+++ b/projects.html
@@ -19,9 +19,9 @@
     
 
     <!-- import the webpage's javascript file -->
-    <script src="/https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="/https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-    <script src="/https://static.tumblr.com/xngweh4/jVInr6vnz/colpick.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js" defer></script>
+    <script src="https://static.tumblr.com/xngweh4/jVInr6vnz/colpick.js" defer></script>
     <script src="/script.js" defer></script>
     <style>
 
