--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 
   </head>
   <body>
-    <div id="picker"></div>
+    <div class="picker" id="picker"></div>
 
     <div class="top-nav">
       <a href="about-copy.html">about</a>
