--- a/photogram-riso.html
+++ b/photogram-riso.html
@@ -203,13 +203,13 @@
   </div>
 
     <div class="process">
-      <img src="assets/photogram-riso-6.png">
-      <img src="assets/photogram-riso-7.png">
-      <img src="assets/photogram-riso-8.png">
-      <img src="assets/photogram-riso-9.png">
-      <img src="assets/photogram-riso-10.png">
-      <img src="assets/photogram-riso-11.png">
-      <img src="assets/photogram-riso-12.png">
+      <img class="process-1" src="assets/photogram-riso-6.png">
+      <img class="process-2" src="assets/photogram-riso-7.png">
+      <img class="process-3" src="assets/photogram-riso-8.png">
+      <img class="process-4" src="assets/photogram-riso-9.png">
+      <img class="process-5" src="assets/photogram-riso-10.png">
+      <img class="process-6" src="assets/photogram-riso-11.png">
+      <img class="process-7" src="assets/photogram-riso-12.png">
     </div>
     
   </body>
