--- a/photogram.html
+++ b/photogram.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
      <!-- add new favicon here -->
-    <link rel="icon" href=""/>
+    <link rel="icon" href="assets/favicon-01.png"/>
 
     <title>Photogram</title>
 
