--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <body>
     <div class="index">
     <div class="hover">
-    <a href="about-copy.html" class="link"><img src="assets/button1.png"></a>
-    <a href="about-copy.html" class="hover-link"><img src="assets/button2.png"></a>
+    <a href="about.html" class="link"><img src="assets/button1.png"></a>
+    <a href="about.html" class="hover-link"><img src="assets/button2.png"></a>
   </div>
 </div>
   </body>
