escape mobile animation

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   <body>
     <div class="picker" id="picker"></div>
 
-    <div class="mobile"><p>To escape, please view this website on a laptop or desktop.</p></div>
+    <div class="mobile" id="banner"><p>To escape, please view this website on a laptop or desktop.</p></div>
     
     <div class="text">
     <div class="esc"><img src="assets/escpng-tra.png"></div>
