--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="reset.css"/>
     <link rel="stylesheet" href="projects-style.css"/>
     <link href="https://static.tumblr.com/xngweh4/lthnr6vng/colpick.css" rel="stylesheet"/>
+    
+
+
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -30,10 +33,11 @@
 
   </head>
   <body>
+
     <div class="picker" id="picker"></div>
 
     <div class="top-nav">
-      <a href="about-copy.html">about</a>
+      <a href="about.html">manifesto</a>
       <a href="submissions.html">submissions</a>
     </div>
 
@@ -41,6 +45,22 @@
     <a href="user.html">user profile</a> 
     <a href="photogram-riso.html">random</a>
     </div>
+
+    <!-- Trigger/Open The Modal -->
+  <div class="container">
+<button id="myBtn" class="info">?</button>
+</div>
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
+
 
     <div class="index">
       <div class="photogram">
