--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,9 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
+    <p>Esc is an online platform for multi-media graphic design explorations into making quickly and without constraint. As graphic designers we are always designing for others, or “problem-solving” — Esc aims to encourage designers to make more for themselves and share that with others.</p>
+    <p>Sign up now to record and save as you browse, upload your own experiments and sell gift merch.</p>
+    <div class="buttons"><button>sign up</button><button>more info</button></div>
   </div>
 
 </div>
