--- a/projects.html
+++ b/projects.html
@@ -34,22 +34,19 @@
   </head>
   <body>
 
-    <div class="picker" id="picker"></div>
+    
 
     <div class="top-nav">
-      <a href="about.html">manifesto</a>
-      <a href="submissions.html">submissions</a>
+      <div class="picker" id="picker"><p>change the background color</p></div>
+      <a href="user.html">user profile</a>
     </div>
 
     <div class="bottom-nav">
-    <a href="user.html">user profile</a> 
-    <a href="photogram-riso.html">random</a>
+      <button id="myBtn" class="button"><p>about</p></button>
+    <a href="about.html">manifesto</a>
     </div>
 
     <!-- Trigger/Open The Modal -->
-  <div class="container">
-<button id="myBtn" class="info">?</button>
-</div>
 <!-- The Modal -->
 <div id="myModal" class="modal">
 
@@ -58,7 +55,7 @@
     <span class="close">&times;</span>
     <p>Esc is an online platform for multi-media graphic design explorations into making quickly and without constraint. As graphic designers we are always designing for others, or “problem-solving” — Esc aims to encourage designers to make more for themselves and share that with others.</p>
     <p>Sign up now to record and save as you browse, upload your own experiments and sell gift merch.</p>
-    <div class="buttons"><button>sign up</button><button>more info</button></div>
+  <a href="sign-up.html" class="sign"><button>sign up</button></a>
   </div>
 
 </div>
