--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
   </head>
   <body>
-    <div class="picker" id="picker"></div>
+    <div class="picker" id="picker"><p>change the background color</p></div>
 
     <div class="mobile" id="banner"><p>To escape, please view this website on a laptop or desktop.</p></div>
     
