--- a/projects.html
+++ b/projects.html
@@ -38,15 +38,16 @@
 
     <div class="top-nav">
       <div class="picker" id="picker"><p>change the background color</p></div>
-      <a href="user.html">user profile</a>
+      <a href="user.html" class="link">user profile</a>
     </div>
+
+    <div class="instruction"><p>Scroll horizontally and vertically, click to explore.</p></div>
 
     <div class="bottom-nav">
-      <button id="myBtn" class="button"><p>about</p></button>
-    <a href="about.html">manifesto</a>
+      <button id="myBtn" class="button link"><p>about</p></button>
+    <a href="about.html" class="link">manifesto</a>
     </div>
 
-    <!-- Trigger/Open The Modal -->
 <!-- The Modal -->
 <div id="myModal" class="modal">
 
@@ -55,9 +56,8 @@
     <span class="close">&times;</span>
     <p>Esc is an online platform for multi-media graphic design explorations into making quickly and without constraint. As graphic designers we are always designing for others, or “problem-solving” — Esc aims to encourage designers to make more for themselves and share that with others.</p>
     <p>Sign up now to record and save as you browse, upload your own experiments and sell gift merch.</p>
-  <a href="sign-up.html" class="sign"><button>sign up</button></a>
-  </div>
-
+ <a href="sign-up.html"><button class="signup">sign up</button></a>
+</div>
 </div>
 
 
