--- a/sign-up.html
+++ b/sign-up.html
@@ -22,27 +22,28 @@
   </head>
   <body>
     <div class="container">
-      <h1>Sign Up</h1>
-      <p>Please fill in this form to create an account.</p>
+      <img src="assets/sign-up.png">
       <hr>
-      <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
+      <div class="fields">
+      <label for="email"><b>email</b></label></br>
+      <input type="text" name="email" required></br>
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <label for="psw"><b>password</b></label></br>
+      <input type="password" name="psw" required></br>
 
-      <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+      <label for="psw-repeat"><b>repeat password</b></label></br>
+      <input type="password" name="psw-repeat" required></br>
       
-      <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
+      <!-- <label>
+        <input class="checked" type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+      </label></br> -->
 
-      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+      <p>By creating an account you agree to our <a href="#" style="color:#fd5c14">Terms & Privacy</a>.</p>
+    </div>
 
       <div class="clearfix">
-        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signupbtn">Sign Up</button>
+        <div class="cancelbtn"><a href="projects.html"><button >cancel</button></a></div>
+        <div class="submit"><a href="user.html"><button type="submit" class="signupbtn">sign up</button></a></div>
       </div>
     </div>
 </div>
