--- a/sign-up.html
+++ b/sign-up.html
@@ -43,7 +43,7 @@
 
       <div class="clearfix">
         <div class="cancelbtn"><a href="projects.html"><button >cancel</button></a></div>
-        <div class="submit"><a href="user.html"><button type="submit" class="signupbtn">sign up</button></a></div>
+        <div class="submit"><a href="user-blank.html"><button type="submit" class="signupbtn">sign up</button></a></div>
       </div>
     </div>
 </div>
