--- a/submissions.html
+++ b/submissions.html
@@ -21,39 +21,32 @@
 
   </head>
   <body>
-    <div class="top-nav">
-      <a href="about-copy.html">about</a>
-      <a href="projects.html">experiments</a>
+    <div class="container">
+      <img src="assets/sign-up.png">
+      <hr>
+      <p>Submit a design experiment to be archived on our website. You can make anything you like, as long as you’re not placing any constraints on yourself and experimenting with new making methods - you never know what might happen.</p>
+
+      <div class="requirements">
+        <p>Requirements:</p>
+        <ol>
+          <li>#1 Document Everything</li>
+          <li>#2 Refer to #1</li>
+          <li>#3 Have Fun, Make, Escape! (Oh, and #1)</li>
+        </ol>
+      </div>
+
+      <div class="fields">
+      <label for="email"><b>Please upload a pdf proposal with at least 10 images of the experiment (process images are encourged! Screenshot! Screen record!) and a 250 word description of the project. The need for a proposal is to ensure there is no hate speech.</b></label></br>
+      
+      <!-- <label>
+        <input class="checked" type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+      </label></br> -->
+
+      <div class="clearfix">
+        <div class="cancelbtn"><a href="user.html"><button >cancel</button></a></div>
+        <div class="submit"><a href="user-blank.html"><button type="submit" class="signupbtn">upload</button></a></div>
+      </div>
     </div>
-
-    <div class="bottom-nav">
-    <a href="user.html">user profile</a> 
-    <a href="photogram-riso.html">random</a>
-    </div>
-
-    <div class="text">
-    <h1 class="want">Want</h1>
-    <h1 class="to">to</h1>
-    <h1 class="escape">escape?</h1>
-    <p class="submit">Submit a design experiment to be archived on our website. You can make anything you like, as long as you’re not placing any constraints on yourself and experimenting with new making methods - you never know what might happen.</p>
-
-    <div class="requirements">
-    <p>Requirements:</p>
-    <ol>
-      <li>#1 Document Everything</li>
-      <li>#2 Refer to #1</li>
-      <li>#3 Have Fun, Make, Escape! (Oh, and #1)</li>
-    </ol>
-  </div>
-
-    <p class="upload">Please upload a pdf proposal with at least 10 images of the experiment (process images are great too!) and a 250 word description of the project. The need for a proposal is to ensure there is no hate speech.</p>
-  </div>
-
-  <div class="index">
-    <div class="hover">
-    <a href="" class="link"><img src="assets/button1.png"></a>
-    <a href="" class="hover-link"><img src="assets/button2.png"></a>
-  </div>
-
+</div>
   </body>
 </html>
