--- a/user-blank.html
+++ b/user-blank.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href="user-style.css"/>
+    <link rel="stylesheet" href="user-blank-style.css"/>
     <link href="https://static.tumblr.com/xngweh4/lthnr6vng/colpick.css" rel="stylesheet"/>
 
     <meta charset="utf-8"/>
@@ -32,6 +32,8 @@
       <a href="projects.html" class="link">index</a>
     </div>
 
+    <div class="instruction"><a href="submissions.html"><button>submit experiment</button></a></div>
+
     <div class="bottom-nav">
       <button id="myBtn" class="button link"><p>about</p></button>
     <a href="about.html" class="link">manifesto</a>
@@ -55,19 +57,7 @@
 </div>
 
 
-    <div class="experiments" id="experiments">
-      <div class="ten"><a href="laser-cut-type.html"><img src="assets/laser-cut-type-4.jpeg"></a></div> 
-      <div class="eleven"><a href="composition.html"><video
-         autoplay loop muted poster src="assets/composition-64.mov"
-          type="video/mov">
-      </video></a></div> 
-      <div class="twelve"><a href="kroy-wen-riso-two.html"><img src="assets/kroy-wen-riso-two-2.png"></a></div>
-      <div class="thirteen"><a href="photogram-riso.html"><img src="assets/photogram-riso-10.png"></a></div>
-      <div class="fourteen"><a href="homepage-video.html"><video autoplay loop muted src="assets/homepage-video-05.mp4" type="video/mp4"></video></a></div>
-      <div class="fifteen"><a href="photogram.html"><img src="assets/photogram-5.jpg"></a></div>
-    <div class="sixteen"><a href="collage-logo-type.html"><img src="assets/collage-logo-type-01.png"></a></div>
-      <div class="seventeen"><a href="kroy-wen-riso.html"><video autoplay loop muted src="assets/kroy-wen-riso-27.mov" type="video/mov" ></video></a></div>
-    </div>
+
 
   </div>
   </body>
